== 1.0.1 ? release
 * Fixes a warning RE relative_url_root when using a prefix with Rails 2.1.1 [seriph] [#85 state:resolved]
 * --only can work as a sequence number (if < 80) or a port number (if >= 80) [jmay] [#81 state:resolved]

== 1.0.0 That's What She Said release
 * Fixed vlad.rake to allow TCP or socket [hellekin]
 * Updated Mack adapter to handle both <0.8.0 and >0.8.0 [Mark Bates]
 * rails rack adapter uses File.readable_real? so it recognizes ACL permissions [Ricardo Chimal]
 * Log a warning if Rack application returns nil body [Michael S. Klishin]
 * Handle nil and Time header values correctly [#76 state:resolved] [tmm1]
 * Add Content-Length header to response automatically when possible [#74 state:resolved] [dkubb]
 * Runner now remembers -r, -D and -V parameters so that clustered servers inherit those and
   `restart` keep your parameters.
 * Make Set-Cookie header, in Rails adapter, compatible with current Rack spec [Pedro Belo]
   [#73, state:resolved]
 * Add --no-epoll option to disable epoll usage on Linux [#61 state:resolved]
 * Add --force (-f) option to force stopping of a daemonized server [#72 state:resolved]
 * Update halycon adapter loader [mtodd]

== 0.8.2 Double Margarita release
 * Require EventMachine 0.12.0
 * [bug] Fix timeout handling when running command
 * [bug] Fix hanging when restarting and no process is running in single server move, fixes #67
 * Added Mack adapter [markbates]
 * Allow rackup .rb files by getting a conventionally named constant as the app [bmizerany]

== 0.8.1 Rebel Porpoise release
 * [bug] Rescue all types of errors when processing request, fixes #62
 * [bug] Use Swiftiply backend when -y option is specified, fixes #63 and #64
 * Allow passing port as a string in Server.new
 * Define deferred?(env) in your Rack application to set if a request is handled in a
	 thread (return true) or not (return false).

== 0.8.0 Dodgy Dentist release
 * [bug] Fix server crash when header too large.