@@ -63,14 +63,14 @@ describe Controller, 'start' do
   end
   
   it "should load app from Rack config" do
-    @controller.options[:rackup] = File.dirname(__FILE__) + '/../../example/config.ru'    
+    @controller.options[:rackup] = File.dirname(__FILE__) + '/../../example/config.ru'
     @controller.start
     
     @server.app.class.should == Proc
   end
 
   it "should load app from ruby file" do
-    @controller.options[:rackup] = filename = File.dirname(__FILE__) + '/../../example/myapp.rb'    
+    @controller.options[:rackup] = File.dirname(__FILE__) + '/../../example/myapp.rb'
     @controller.start
     
     @server.app.should == Myapp
@@ -78,7 +78,7 @@ describe Controller, 'start' do
 
   it "should throwup if rackup is not a .ru or .rb file" do
     proc do
-      @controller.options[:rackup] = filename = File.dirname(__FILE__) + '/../../example/myapp.foo'    
+      @controller.options[:rackup] = File.dirname(__FILE__) + '/../../example/myapp.foo'
       @controller.start
     end.should raise_error(RuntimeError, /please/)
   end
@@ -88,6 +88,14 @@ describe Controller, 'start' do
     @controller.start
     
     @server.threaded.should be_true
+  end
+  
+  it "should set RACK_ENV" do
+    @controller.options[:rackup] = File.dirname(__FILE__) + '/../../example/config.ru'
+    @controller.options[:environment] = "lolcat"
+    @controller.start
+    
+    ENV['RACK_ENV'].should == "lolcat"
   end
     
 end
